@@ -1,3 +1,9 @@
+2007-05-04  Alan Modra  <amodra@bigpond.net.au>
+
+	PR gas/4460
+	* config/tc-i386.c (lex_got): Don't replace the reloc token with
+	a space if we already have a space.
+
 2007-05-03  H.J. Lu  <hongjiu.lu@intel.com>
 
 	* config/tc-i386.c (match_template): Don't explicitly check
